# kaleidoscope-compiler

./: CMakeLists.txt  README.md  main.cpp
examples/: basic.kal  mandelbrot.kal
src/: ast.h  codegen.cpp  codegen.h  lexer.h  main.cpp  parser.h
